Fix horizontal layout bug

--- a/app/styles/_data-table.scss
+++ b/app/styles/_data-table.scss
@@ -5,13 +5,9 @@ $id-column-outer-width: 60px;
   max-width: 100%;
 }
 
-// .data-table-container {
-//   border-left: 1px $table-border-style $table-border-color;
-//   width: 100%;
-// }
-
-.data-table-container-inner {
+.data-table-wrapper{
   overflow-x: auto;
+  padding-left: 1px;
 }
 
 table.data-table {
